<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Retroboy</string>
    
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    
    <string name="btn_take_photo">Take Photo</string>
    <string name="btn_auto_focus">Auto Focus</string>
    <string name="btn_exposure_set">Set</string>
    <string name="btn_exposure_cancel">Cancel</string>
    
    <string name="menu_option_select_image">Gallery</string>
    <string name="menu_option_discard_image">Discard</string>
    <string name="menu_option_settings">Settings</string>
    <string name="menu_option_switch_camera">Switch Camera</string>
    <string name="menu_option_switch_camera_mode">Camera/Video</string>
    <string name="menu_option_filter">Filter</string>
    <string name="menu_option_share_image">Share</string>
    <string name="menu_option_camera_torch">Torch</string>
    <string name="menu_option_contrast">Contrast</string>
    <string name="menu_option_resolution">Resolution</string>
    <string name="menu_option_orientation">Orientation</string>
    <string name="menu_option_scenemode">Scene Mode</string>
    <string name="menu_option_palette">Palette</string>
    <string name="menu_option_matrixsize">Dithering</string>
    <string name="menu_option_rasterlevel">Rastering</string>
    
    <string name="pref_title_resolution">Resolution</string>
    <string name="pref_summary_resolution">The larger sizes may be slow or unsupported depending on your device</string>
    
    <string name="pref_title_filter">Filter</string>
    <string name="pref_summary_filter">1-bit dithering filter</string>

    <string name="pref_title_contrast">Contrast</string>
    <string name="pref_summary_contrast">Adjust image contrast</string>
    
    <string name="pref_title_exposure">Exposure Compensation</string>
    <string name="pref_summary_exposure">Adjust image brightness</string>
    <string name="pref_format_exposure">%.01f Ev</string>

    <string name="help_processed_image">1-bit processed image</string>
    
    <string name="title_saving_image">Saving Image</string>
    <string name="msg_saving_image">Please wait a few seconds while the image is processed</string>
    
    <string name="title_init_filter">Initializing Filter</string>
    <string name="msg_init_filter">Please wait a few seconds for this one time event</string>

    <string name="label_scenemode_auto">None</string>
    <string name="label_scenemode_action">Action</string>
    <string name="label_scenemode_beach">Beach/Snow</string>
    <string name="label_scenemode_dusk_dawn">Dawn</string>
    <string name="label_scenemode_night">Night</string>
    <string name="label_scenemode_party">Party/Indoor</string>
    <string name="label_scenemode_sunset">Sunset</string>
    <string name="label_scenemode_sports">Sports</string>
</resources>