<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item 
        android:id="@+id/switchCameraOption" 
        android:icon="@drawable/ic_menu_camera_rotate" 
        android:title="@string/menu_option_switch_camera"
        android:showAsAction="always"/>
    <item 
        android:id="@+id/switchFilterOption" 
        android:icon="@drawable/ic_menu_bayer" 
        android:title="@string/menu_option_switch_filter"
        android:showAsAction="always"/>
    <item 
        android:id="@+id/selectImageOption" 
        android:icon="@drawable/ic_menu_gallery" 
        android:title="@string/menu_option_select_image"
        android:showAsAction="always"/>
    <item 
        android:id="@+id/editSettingsOption" 
        android:icon="@drawable/ic_menu_preferences"
        android:title="@string/menu_option_settings" 
        android:showAsAction="never"/>
</menu>
